Fix usage of version dropdown to work on mobile (#790)

--- a/src/pydata_sphinx_theme/assets/styles/sections/_header.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_header.scss
@@ -40,8 +40,13 @@
   @include media-breakpoint-down(md) {
     // Make it scrollable with a max height on mobile in cases there are many items
     max-height: 90vh;
-    overflow-y: auto;
+    overflow-y: visible;
     @include scrollbar-style;
+
+    // If we're expanded, then make it possible to scroll if overflow
+    &.shown {
+      overflow-y: auto;
+    }
 
     button.navbar-toggler {
       border-color: var(--pst-color-text-muted);
